// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Event Stream > OpenAPI 1`] = `
{
  "components": {
    "headers": {},
    "parameters": {},
    "schemas": {
      "Tick": {
        "additionalProperties": false,
        "properties": {
          "count": {
            "type": "integer",
          },
        },
        "required": [
          "count",
        ],
        "type": "object",
      },
      "TickEvent": {
        "additionalProperties": false,
        "properties": {
          "data": {
            "contentMediaType": "application/json",
            "contentSchema": {
              "$ref": "#/components/schemas/Tick",
            },
            "type": "string",
          },
          "event": {
            "const": "tick",
          },
          "id": {
            "type": "string",
          },
        },
        "required": [
          "event",
          "data",
        ],
        "type": "object",
      },
    },
    "securitySchemes": {},
  },
  "info": {
    "title": "Event Stream API",
    "version": "1.0.0",
  },
  "openapi": "3.2.0",
  "paths": {
    "/ticks": {
      "get": {
        "operationId": "streamTicksCommand",
        "responses": {
          "200": {
            "content": {
              "text/event-stream": {
                "itemSchema": {
                  "$ref": "#/components/schemas/TickEvent",
                },
              },
            },
            "description": "One tick per second",
          },
        },
        "tags": [],
      },
    },
  },
  "security": [],
  "servers": [],
  "tags": [],
}
`;

exports[`Example > OpenAPI 1`] = `
{
  "components": {
    "headers": {
      "x-rate-limit": {
        "description": "Number of requests allowed per hour",
        "required": true,
        "schema": {
          "$ref": "#/components/schemas/RateLimit",
        },
      },
      "x-rate-limit-remaining": {
        "description": "Number of requests remaining in the current window",
        "schema": {
          "$ref": "#/components/schemas/RateLimit",
        },
      },
    },
    "parameters": {
      "UserId": {
        "in": "path",
        "name": "userId",
        "required": true,
        "schema": {
          "$ref": "#/components/schemas/Id",
        },
      },
    },
    "schemas": {
      "Address": {
        "additionalProperties": false,
        "properties": {
          "postcode": {
            "format": "int32",
            "maximum": 9999,
            "minimum": 1000,
            "type": "integer",
          },
        },
        "required": [
          "postcode",
        ],
        "type": "object",
      },
      "Binary": {
        "format": "binary",
        "type": "string",
      },
      "CreateUserRequest": {
        "additionalProperties": false,
        "properties": {
          "address": {
            "$ref": "#/components/schemas/Address",
          },
          "age": {
            "anyOf": [
              {
                "format": "int32",
                "minimum": 0,
                "type": "integer",
              },
              {
                "type": "null",
              },
            ],
          },
          "name": {
            "type": "string",
          },
          "userId": {
            "$ref": "#/components/schemas/Id",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
      "Id": {
        "type": "string",
      },
      "RateLimit": {
        "format": "int32",
        "minimum": 0,
        "type": "integer",
      },
      "UpdateUserRequest": {
        "additionalProperties": false,
        "minProperties": 1,
        "properties": {
          "address": {
            "$ref": "#/components/schemas/Address",
          },
          "age": {
            "format": "int32",
            "minimum": 0,
            "type": "integer",
          },
        },
        "type": "object",
      },
      "User": {
        "additionalProperties": false,
        "properties": {
          "address": {
            "$ref": "#/components/schemas/Address",
          },
          "age": {
            "anyOf": [
              {
                "format": "int32",
                "minimum": 0,
                "type": "integer",
              },
              {
                "type": "null",
              },
            ],
          },
          "name": {
            "type": "string",
          },
          "userId": {
            "$ref": "#/components/schemas/Id",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
      "Users": {
        "items": {
          "$ref": "#/components/schemas/User",
        },
        "type": "array",
        "uniqueItems": true,
      },
    },
    "securitySchemes": {
      "HttpBearerJwtScheme": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
    },
  },
  "info": {
    "title": "Example REST API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users": {
      "get": {
        "operationId": "listUsersCommand",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Users",
                },
              },
            },
            "description": "User 200 response",
            "headers": {
              "x-rate-limit": {
                "description": "Number of requests allowed per hour",
                "required": true,
                "schema": {
                  "$ref": "#/components/schemas/RateLimit",
                },
              },
              "x-rate-limit-remaining": {
                "description": "Number of requests remaining in the current window",
                "schema": {
                  "$ref": "#/components/schemas/RateLimit",
                },
              },
            },
          },
        },
        "tags": [
          "user",
        ],
      },
      "post": {
        "operationId": "createUserCommand",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateUserRequest",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Users",
                },
              },
            },
            "description": "User 200 response",
          },
        },
        "tags": [
          "user",
          "random",
        ],
      },
    },
    "/users/{userId}": {
      "delete": {
        "operationId": "deleteUserByIdCommand",
        "security": [
          {
            "HttpBearerJwtScheme": [
              "users.delete",
            ],
          },
        ],
        "tags": [
          "user",
          "random",
        ],
      },
      "get": {
        "operationId": "getUserByIdCommand",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
            "description": "User 200 response",
          },
        },
        "tags": [],
      },
      "head": {
        "operationId": "checkUserIdAvailableCommand",
        "security": [
          {},
        ],
        "tags": [],
      },
      "parameters": [
        {
          "$ref": "#/components/parameters/UserId",
        },
      ],
      "post": {
        "operationId": "updateUserCommand",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UpdateUserRequest",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
            "description": "Successful response",
          },
        },
        "tags": [],
      },
    },
    "/users/{userId}/avatar": {
      "get": {
        "description": "Download user avatar as JSON metadata or raw binary",
        "operationId": "getUserAvatarCommand",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User",
                },
              },
              "application/octet-stream": {
                "schema": {
                  "$ref": "#/components/schemas/Binary",
                },
              },
            },
            "description": "Avatar response",
          },
        },
        "tags": [],
      },
      "parameters": [
        {
          "$ref": "#/components/parameters/UserId",
        },
      ],
      "put": {
        "description": "Upload user avatar as binary",
        "operationId": "uploadUserAvatarCommand",
        "requestBody": {
          "content": {
            "application/octet-stream": {
              "schema": {
                "$ref": "#/components/schemas/Binary",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
            "description": "Successful response",
          },
        },
        "tags": [],
      },
    },
  },
  "security": [
    {
      "HttpBearerJwtScheme": [],
    },
    {
      "HttpBearerJwtScheme": [
        "users.delete",
      ],
    },
    {},
  ],
  "servers": [
    {
      "url": "https://api.example.com/",
    },
  ],
  "tags": [
    {
      "name": "user",
    },
    {
      "name": "random",
    },
  ],
}
`;

exports[`Note Taking > OpenAPI 1`] = `
{
  "components": {
    "headers": {},
    "parameters": {
      "NoteId": {
        "in": "path",
        "name": "noteId",
        "required": true,
        "schema": {
          "$ref": "#/components/schemas/Id",
        },
      },
      "NoteUserId": {
        "in": "path",
        "name": "userId",
        "required": true,
        "schema": {
          "$ref": "#/components/schemas/Id",
        },
      },
      "UserId": {
        "in": "path",
        "name": "userId",
        "required": true,
        "schema": {
          "$ref": "#/components/schemas/Id",
        },
      },
    },
    "schemas": {
      "Address": {
        "additionalProperties": false,
        "properties": {
          "postcode": {
            "format": "int32",
            "maximum": 9999,
            "minimum": 1000,
            "type": "integer",
          },
        },
        "required": [
          "postcode",
        ],
        "type": "object",
      },
      "CreateNoteRequest": {
        "additionalProperties": false,
        "properties": {
          "content": {
            "type": "string",
          },
          "labels": {
            "items": {
              "maxLength": 256,
              "minLength": 1,
              "type": "string",
            },
            "type": "array",
          },
          "title": {
            "type": "string",
          },
        },
        "required": [
          "title",
          "content",
        ],
        "type": "object",
      },
      "CreateUserRequest": {
        "additionalProperties": false,
        "properties": {
          "address": {
            "$ref": "#/components/schemas/Address",
          },
          "age": {
            "format": "int32",
            "minimum": 0,
            "type": "integer",
          },
          "name": {
            "type": "string",
          },
          "userId": {
            "$ref": "#/components/schemas/Id",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
      "Id": {
        "maxLength": 6,
        "minLength": 6,
        "type": "string",
      },
      "Note": {
        "additionalProperties": false,
        "properties": {
          "content": {
            "type": "string",
          },
          "labels": {
            "items": {
              "maxLength": 256,
              "minLength": 1,
              "type": "string",
            },
            "type": "array",
          },
          "title": {
            "type": "string",
          },
        },
        "required": [
          "title",
          "content",
        ],
        "type": "object",
      },
      "Notes": {
        "items": {
          "$ref": "#/components/schemas/Note",
        },
        "type": "array",
        "uniqueItems": true,
      },
      "UpdateNoteRequest": {
        "additionalProperties": false,
        "minProperties": 1,
        "properties": {
          "content": {
            "type": "string",
          },
          "labels": {
            "items": {
              "maxLength": 256,
              "minLength": 1,
              "type": "string",
            },
            "type": "array",
          },
          "title": {
            "type": "string",
          },
        },
        "type": "object",
      },
      "UpdateUserRequest": {
        "additionalProperties": false,
        "minProperties": 1,
        "properties": {
          "address": {
            "$ref": "#/components/schemas/Address",
          },
          "age": {
            "format": "int32",
            "minimum": 0,
            "type": "integer",
          },
        },
        "type": "object",
      },
      "User": {
        "additionalProperties": false,
        "properties": {
          "address": {
            "$ref": "#/components/schemas/Address",
          },
          "age": {
            "format": "int32",
            "minimum": 0,
            "type": "integer",
          },
          "name": {
            "type": "string",
          },
          "userId": {
            "$ref": "#/components/schemas/Id",
          },
        },
        "required": [
          "name",
        ],
        "type": "object",
      },
      "Users": {
        "items": {
          "$ref": "#/components/schemas/User",
        },
        "type": "array",
        "uniqueItems": true,
      },
    },
    "securitySchemes": {
      "HttpBearerJwtScheme": {
        "bearerFormat": "JWT",
        "scheme": "bearer",
        "type": "http",
      },
    },
  },
  "info": {
    "title": "Example REST API",
    "version": "1.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users": {
      "get": {
        "operationId": "listUsersCommand",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Users",
                },
              },
            },
            "description": "User 200 response",
          },
        },
        "tags": [
          "user",
        ],
      },
      "post": {
        "operationId": "createUserCommand",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateUserRequest",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Users",
                },
              },
            },
            "description": "User 200 response",
          },
        },
        "tags": [
          "user",
        ],
      },
    },
    "/users/{userId}": {
      "delete": {
        "operationId": "deleteUserByIdCommand",
        "security": [
          {
            "HttpBearerJwtScheme": [
              "users.delete",
            ],
          },
        ],
        "tags": [],
      },
      "get": {
        "operationId": "getUserByIdCommand",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
            "description": "User 200 response",
          },
        },
        "tags": [],
      },
      "head": {
        "operationId": "checkUserIdAvailableCommand",
        "responses": {
          "204": {
            "content": {},
            "description": "Successful response",
          },
          "404": {
            "content": {},
            "description": "Successful response",
          },
        },
        "security": [
          {},
        ],
        "tags": [],
      },
      "parameters": [
        {
          "$ref": "#/components/parameters/UserId",
        },
      ],
      "post": {
        "operationId": "updateUserCommand",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UpdateUserRequest",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
            "description": "Successful response",
          },
        },
        "tags": [],
      },
    },
    "/users/{userId}/notes": {
      "get": {
        "description": "List all of the notes",
        "operationId": "listNotesCommand",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Notes",
                },
              },
            },
            "description": "Notes 200 response",
          },
        },
        "summary": "List notes",
        "tags": [
          "user",
        ],
      },
      "parameters": [
        {
          "$ref": "#/components/parameters/NoteUserId",
        },
      ],
      "post": {
        "deprecated": true,
        "operationId": "createNoteCommand",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CreateNoteRequest",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Note",
                },
              },
            },
            "description": "Note created 200 response",
          },
        },
        "tags": [
          "user",
        ],
      },
    },
    "/users/{userId}/notes/{noteId}": {
      "delete": {
        "operationId": "deleteNoteCommand",
        "security": [
          {
            "HttpBearerJwtScheme": [
              "notes.delete",
            ],
          },
        ],
        "tags": [],
      },
      "get": {
        "operationId": "getNoteCommand",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Note",
                },
              },
            },
            "description": "Note 200 response",
          },
        },
        "tags": [],
      },
      "parameters": [
        {
          "$ref": "#/components/parameters/NoteUserId",
        },
        {
          "$ref": "#/components/parameters/NoteId",
        },
      ],
      "post": {
        "operationId": "updateNoteCommand",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/UpdateNoteRequest",
              },
            },
          },
          "description": "",
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Note",
                },
              },
            },
            "description": "Successful response",
          },
        },
        "tags": [],
      },
    },
  },
  "security": [
    {
      "HttpBearerJwtScheme": [],
    },
    {
      "HttpBearerJwtScheme": [
        "users.delete",
      ],
    },
    {},
    {
      "HttpBearerJwtScheme": [
        "notes.delete",
      ],
    },
  ],
  "servers": [
    {
      "url": "https://api.example.com/",
    },
  ],
  "tags": [
    {
      "name": "user",
    },
  ],
}
`;
